refactor: misc. cleanups